--- a/style.css
+++ b/style.css
@@ -56,30 +56,10 @@ box-shadow: 0px 10px 30px grey;
 }
 
 .container{
-width: 700px;
+width: 80%;
 margin: 20px auto;
 
 }
-
-@media (max-width: 760px){
-	.container{
-		width: 600 px;
-	}
-}
-
-
-
-@media (max-width: 500px){
-.container{
-	width: 400px;
-	}
-
-}
-
-
-
-
-
 
 .box-white {
 	display: flex;
@@ -128,6 +108,21 @@ margin-bottom: 40px;
 }
 
 
+
+@media (max-width: 760px){
+	.container{
+		width: 600 px;
+	}
+}
+
+
+
+@media (max-width: 500px){
+.container{
+	width: 400px;
+	}
+
+}
 
 
 
